[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-security-agent"
version = "1.0.0"
description = "Adversarial RL Cyber-Range for SOC Analyst Training."
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "gymnasium",
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn",
    "requests"
]

[tool.setuptools]
package_dir = {"" = "src"}
packages = ["infra_security_agent", "infra_security_agent.server"]

[project.scripts]
server = "infra_security_agent.server.app:main"
