[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-security-agent"
version = "1.0.0"
description = "Professional Adversarial RL Cyber-Range for SOC Analyst Training."
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "gymnasium",
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn",
    "requests"
]

[project.scripts]
server = "env.app:main"

[project.entry-points."openenv.environments"]
infra-security-agent = "env.security_env:SecurityLogEnv"

[tool.setuptools]
packages = ["env"]
