[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infra-security-agent"
version = "1.0.0"
description = "A professional, high-fidelity security analyst RL environment."
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "gymnasium",
    "pydantic",
    "numpy",
    "pandas",
    "openai",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "requests"
]

[project.scripts]
server = "infra_security_agent.server.app:main"

[project.entry-points."openenv.environments"]
infra-security-agent = "infra_security_agent.server.environment:SecurityLogEnv"

[tool.setuptools]
package_dir = {"" = "src"}
packages = ["infra_security_agent", "infra_security_agent.server"]
